suite/tests/functions/invalid/func-ret-type-change.c
int foo(int a);
long foo(int a);

